# Sighline-whole

./: .gitignore  README.md
sightline-app/: .env  .gitignore  DESIGN_PHILOSOPHY.md  app.base.json  app.config.js  app.json  eas.json  metro.config.js  package-lock.json  package.json
sightline-app/app/: _layout.tsx  index.tsx  modal.tsx
sightline-app/app/pages/: settings.tsx  splash.tsx  v2_demo.tsx  v3_tflite.tsx
sightline-app/assets/models/finally/: metadata.yaml  model.json
sightline-app/components/: camera-component.tsx  settings-panel.tsx  text-scan-panel.tsx
sightline-app/constants/: design-system.ts
sightline-app/scripts/: reset-project.js
sightline-app/services/: cameraService.ts  config.ts  detectionService.ts  ocrService.ts
sightline-server/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  start_server.sh
sightline-server/engine/: __init__.py  adapter.py  engine.py  face_recognition.py  models.py
sightline-server/face/: __init__.py  face_db.py  face_service.py
sightline-server/src/: basetrack.py  byte_tracker.py  server.py
sightline-server/src/sightline_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sightline-server/tests/: test_adapter.py  test_integration.py  test_manual.py
sightviz-spatial-engine/: README.md  __init__.py  config.py  demo_hackathon.py  engine.py  models.py
sightviz_face/: compare_faces.py  detect_face.py  face_database.py  generate_embedding.py  main.py
